[package]
name = "filter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
filter-macros = { git = "https://github.com/Spxg/filter-macros.git", branch = "master" }
# filter-macros = { path = "../filter-macros" }
