[package]
name = "predicate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
predicate-macros = { git = "https://github.com/Spxg/predicate-macros.git", branch = "master" }
# predicate-macros = { path = "../predicate-macros" }
