[package]
name = "predicate"
version = "0.1.0"
authors = ["spxg <unsafe@outlook.es>"]
edition = "2018"
description = "Use enum to predicate something, support & and | operator."
documentation = "https://docs.rs/predicate"
homepage = "https://github.com/Spxg/predicate"
repository = "https://github.com/Spxg/predicate"
keywords = ["assert", "predicate", "filter", "enum", "boolean"]
categories = ["accessibility", "data-structures"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rc"]
rc = []
arc = []

[dev-dependencies]
predicate-macros = { git = "https://github.com/Spxg/predicate-macros.git", branch = "master" }
